Began fancying site

--- a/Site/SchedulerStyle.css
+++ b/Site/SchedulerStyle.css
@@ -1,4 +1,10 @@
-*{
+
+.Menubar {
+    background-color: F0AD00;
+    
+}
+			 
+/**{
 	font-family: Verdana
 }
 
@@ -16,6 +22,7 @@ body {
 }
 #Menu{
     float: left;
+    background-color: FF0000;
 }
 #Menu > li {
     float: left;
@@ -53,3 +60,4 @@ font-size: 20px;
 font-size: 18px;
 }
 
+*/
